# kafka-partition-remapper-operator

./: .gitignore  Cargo.toml  Dockerfile
.github/: dependabot.yml
.github/workflows/: docker-publish.yaml  release.yaml  sync-helm-chart.yaml  test.yaml
deploy/crds/: all.yaml
deploy/helm/kafka-partition-remapper-operator/: Chart.yaml  values.yaml
deploy/helm/kafka-partition-remapper-operator/crds/: all.yaml
deploy/helm/kafka-partition-remapper-operator/templates/: NOTES.txt  _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
deploy/operator/: deployment.yaml  namespace.yaml
deploy/rbac/: role.yaml  rolebinding.yaml  serviceaccount.yaml
minikube/: README.md
minikube/base/confluent-platform/: kafka-topic.yaml  kafka.yaml  kustomization.yaml  zookeeper.yaml
minikube/overlays/test/: consumer.yaml  kafka-partition-remapper.yaml  kustomization.yaml  producer.yaml
minikube/scripts/: setup.sh  teardown.sh  verify.sh
src/: error.rs  lib.rs  main.rs
src/adapters/: deployment_builder.rs  mod.rs  remapper_config.rs  secrets.rs  service_builder.rs
src/controllers/: mod.rs  remapper_controller.rs
src/crd/: kafka_partition_remapper.rs  mod.rs
src/metrics/: mod.rs  prometheus.rs
src/reconcilers/: mod.rs  remapper.rs
tests/: reconciler_validation_tests.rs
